--- a/1/formulas.tex
+++ b/1/formulas.tex
@@ -15,3 +15,38 @@
 
 Обратный ход:
 \left\{x_i = y_i - \sum\limits_{j=i+1}^{n} l_{ji} x_j,\qquad i=\overline{n,1}\right.
+
+A=\begin{pmatrix}
+5+10^{-k} &0  &0  &-2  &-3  &0  &0  &0  &0  &0 \\ 
+0 &10  &-2  &-2  &-4  &-2  &0  &0  &0  &0 \\ 
+0 &-2  &14  &-4  &-4  &-3  &-1  &0  &0  &0 \\ 
+-2 &-2  &-4  &15  &-1  &-4  &0  &-2  &0  &0 \\ 
+-3 &-4  &-4  &-1  &17  &0  &0  &-4  &-1  &0 \\ 
+0 &-2  &-3  &-4  &0  &13  &-1  &0  &0  &-3 \\ 
+0 &0  &-1  &0  &0  &-1  &5  &0  &0  &-3 \\ 
+0 &0  &0  &-2  &-4  &0  &0  &8  &0  &-2 \\ 
+0 &0  &0  &0  &-1  &0  &0  &0  &3  &-2 \\ 
+0 &0  &0  &0  &0  &-3  &-3  &-2  &-2  &10 
+\end{pmatrix}, X=\begin{pmatrix}
+1\\ 
+2\\ 
+3\\ 
+4\\ 
+5\\ 
+6\\ 
+7\\ 
+8\\ 
+9\\ 
+10
+\end{pmatrix}, F=\begin{pmatrix}
+-18+10^{-k}\\ 
+-26\\ 
+-23\\ 
+-3\\ 
+17\\ 
+12\\ 
+-4\\ 
+16\\ 
+2\\ 
+27
+\end{pmatrix}
