--- a/1/formulas.tex
+++ b/1/formulas.tex
@@ -35,3 +35,21 @@ X=\begin{pmatrix}
 F=\begin{pmatrix}
 -18+10^{-k}\\ -26\\ -23\\ -3\\ 17\\ 12\\ -4\\ 16\\ 2\\ 27
 \end{pmatrix}
+
+Разложение LDL^T:
+\sum_{i=1}^{n} \left( \sum_{j=1}^{i-1} \left( \sum_{k=1}^{j-1} 3 + 2 + 3 \right) + 1 \right) = \frac{n^3}{2} + n^2 - \frac{n}{2}
+
+Прямой обход:
+\sum_{i=1}^{n} \left( \sum_{j=1}^{i-1} 2 + 1 \right) = n^2
+
+Обратный обход:
+\sum_{i=1}^{n} \sum_{j=1}^{i-1} 2  = n^2-n
+
+Центральный обход:
+\sum_{i=1}^{n} 1  = n
+
+Всего:
+\frac{n^3}{2} + n^2 - \frac{n}{2} + n^2 + n^2-n + n = \frac{n^3}{2} + 3n^2 - \frac{n}{2}
+
+Метод Гаусса:
+\frac{2n^3}{3} + \frac{3n^2}{2} + \frac{5n}{6}
