--- a/2/report/file.tex
+++ b/2/report/file.tex
@@ -11,17 +11,13 @@
 Программа состоит из нескольких частей:
 \noindent\begin{easylist}
 \ListProperties(Hang1=true)
-& \texttt{common.h + common.cpp} --- пара общих функций и объявление вещественных типов.
-& \texttt{matrix.h + matrix.cpp} --- модуль для работы с матрицами в плотном формате.
+& \texttt{common.h + common.cpp} --- пара общих функций и объявление вещественных типов (было в прошлом отчете, поэтому здесь не приводится).
+& \texttt{matrix.h + matrix.cpp} --- модуль для работы с матрицами в плотном формате (было в прошлом отчете, поэтому здесь не приводится).
 & \texttt{diagonal.h + diagonal.cpp} --- модуль для работы с матрицами в диагональном формате.
 & \texttt{table\_generator.cpp} --- программа, которая генерирует таблицы.
 \end{easylist}
 
-\mycodeinput{c++}{nm/1/common.h}{common.h}
-\mycodeinput{c++}{nm/1/matrix.h}{matrix.h}
 \mycodeinput{c++}{nm/2/diagonal.h}{diagonal.h}
-\mycodeinput{c++}{nm/1/common.cpp}{common.cpp}
-\mycodeinput{c++}{nm/1/matrix.cpp}{matrix.cpp}
 \mycodeinput{c++}{nm/2/diagonal.cpp}{diagonal.cpp}
 \mycodeinput{c++}{nm/2/numerical_tests.cpp}{table\_generator.cpp}
 
