--- a/2/report/my_title.tex
+++ b/2/report/my_title.tex
@@ -68,7 +68,7 @@
 \usepackage{minted}
 
 % Задаем цвет номеров строк подсветки кода
-\renewcommand{\theFancyVerbLine}{\sffamily\textcolor[rgb]{1, 1, 1}{\scriptsize\arabic{FancyVerbLine}}}
+\renewcommand{\theFancyVerbLine}{\sffamily\textcolor[rgb]{1, 1, 1}{\tiny\arabic{FancyVerbLine}}}
 
 % Определяем новую команду для красивой вставки кода в рамочке и с прочими прелестями
 \newcommand{\mycodeinput}[3]{
@@ -119,7 +119,7 @@
 	linenos,
 	numbersep=1mm,
 	mathescape, 
-	fontsize=\footnotesize, 
+	fontsize=\tiny, 
 	tabsize=4
 ]{#1}{#2}
 \end{tcolorbox}
