--- a/2/report/file.tex
+++ b/2/report/file.tex
@@ -10,37 +10,64 @@
 
 Программа состоит из нескольких частей:
 \noindent\begin{easylist}
-\ListProperties(Hang1=true)
-& \texttt{common.h + common.cpp} --- пара общих функций и объявление вещественных типов (было в прошлом отчете, поэтому здесь не приводится).
-& \texttt{matrix.h + matrix.cpp} --- модуль для работы с матрицами в плотном формате (было в прошлом отчете, поэтому здесь не приводится).
-& \texttt{diagonal.h + diagonal.cpp} --- модуль для работы с матрицами в диагональном формате.
-& \texttt{table\_generator.cpp} --- программа, которая генерирует таблицы.
+\ListProperties(Hang1=true, Margin2=12pt, Style1**=$\bullet$ , Hide2=1, Hide1=1)
+& То, что было в прошлом отчете и здесь не приводится:
+&& \texttt{common.h + common.cpp} --- пара общих функций и объявление вещественных типов.
+&& \texttt{matrix.h + matrix.cpp} --- модуль для работы с матрицами в плотном формате.
+&& \texttt{vector.h + vector.cpp} --- модуль для работы с векторами.
+& Новый код:
+&& \texttt{diagonal.h + diagonal.cpp} --- модуль для работы с матрицами в диагональном формате.
+&& \texttt{table\_generator.cpp} --- программа, которая генерирует таблицы.
+&& \texttt{diagonal\_test.cpp} --- юнит-тестирование модуля для работы с диагональными матрицами.
 \end{easylist}
 
+\begin{multicols*}{2}
 \mycodeinput{c++}{nm/2/diagonal.h}{diagonal.h}
 \mycodeinput{c++}{nm/2/diagonal.cpp}{diagonal.cpp}
 \mycodeinput{c++}{nm/2/numerical_tests.cpp}{table\_generator.cpp}
+\end{multicols*}
+\mycodeinput{c++}{nm/2/diagonal_test.cpp}{diagonal\_test.cpp}
 
 \section{Тестирование}
 
 Для тестирования использовалось юнит-тестирование и библиотека Catch. Было протестировано получение необходимой относительной невязки на матрицах с диагональным преобладанием.
 
 \begin{center}
-\noindent\includegraphics{unit_test.png}
+\noindent\includegraphics[scale=0.7]{unit_test.png}
 \end{center}
-
-\mycodeinput{c++}{nm/2/diagonal_test.cpp}{diagonal\_test.cpp}
 
 \section{Исследования}
 
 \subsection{Матрица с диагональным преобладанием}
 \input{A}
 
+\subsubsection{Расчет числа обусловленности через MathCad}
+$\displaystyle
+	\begin{aligned}
+		&\mathop{conde}(A) = 133.86 \\
+		&\mathop{condi}(A) = 111.728 \\
+		&\mathop{conde}(A) = 200  \\
+		&\mathop{conde}(A) = 74.622  \\
+		&\frac{\lambda^A_{max}}{\lambda^A_{min}} = \frac{13.709}{0.278} = 49.313  \\
+	\end{aligned}
+$
+
 \subsection{Матрица с обратным знаком внедиагональных элементов}
 \input{B}
 
+\subsubsection{Расчет числа обусловленности через MathCad}
+$\displaystyle
+	\begin{aligned}
+		&\mathop{conde}(B) = 44.931 \\
+		&\mathop{condi}(B) = 34.897 \\
+		&\mathop{conde}(B) = 53.051  \\
+		&\mathop{conde}(B) = 20.536  \\
+		&\frac{\lambda^B_{max}}{\lambda^B_{min}} = \frac{14.284}{0.93} = 15.359  \\
+	\end{aligned}
+$
+
 \section{Выводы}
 
-Исследования показали, что для различных матриц необходим различный параметр релаксации, и что иногда он может лежать за допустимыми пределами (как это было для метода Якоби, где $w = 1.08$). График зависимости числа итераций от параметра релаксации имеет непростой вид, что сильно затрудняет его выбор без перебора всех вариантов.
+Исследования показали, что для различных матриц необходим различный параметр релаксации, и что иногда он может лежать за допустимыми пределами (как это было для метода Якоби, где $w = 1.08$). График зависимости числа итераций от параметра релаксации имеет один ярко выраженный минимум, что позволяет подобрать его благодаря методам поиска минимума, либо различным эвристикам.
 
-Так же было оценено число обусловленности: $ \mathop{cond}(A) > 1.49 $, $ \mathop{cond}(B) > 13.93 $.
+Так же было оценено число обусловленности по относительной невязке и погрешности: $ \mathop{cond}(A) > 8.54 $, $ \mathop{cond}(B) > 10.90 $. Смотря на расчет числа обусловленности через специальные программы, можем заметить, что в реальности оно в несколько раз больше, чем было оценено.
