--- a/2/report/file.tex
+++ b/2/report/file.tex
@@ -46,8 +46,8 @@ $\displaystyle
 	\begin{aligned}
 		&\mathop{conde}(A) = 133.86 \\
 		&\mathop{condi}(A) = 111.728 \\
-		&\mathop{conde}(A) = 200  \\
-		&\mathop{conde}(A) = 74.622  \\
+		&\mathop{cond1}(A) = 200  \\
+		&\mathop{cond2}(A) = 74.622  \\
 		&\frac{\lambda^A_{max}}{\lambda^A_{min}} = \frac{13.709}{0.278} = 49.313  \\
 	\end{aligned}
 $
@@ -60,8 +60,8 @@ $\displaystyle
 	\begin{aligned}
 		&\mathop{conde}(B) = 44.931 \\
 		&\mathop{condi}(B) = 34.897 \\
-		&\mathop{conde}(B) = 53.051  \\
-		&\mathop{conde}(B) = 20.536  \\
+		&\mathop{cond1}(B) = 53.051  \\
+		&\mathop{cond2}(B) = 20.536  \\
 		&\frac{\lambda^B_{max}}{\lambda^B_{min}} = \frac{14.284}{0.93} = 15.359  \\
 	\end{aligned}
 $
